# my_games_library

./: .env  .env-prod  .env.prod  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yaml  game.json  games.json  package-lock.json  package.json  parser_1.py  pyproject.toml  test.json
backend/: .env  .env-prod  .gitignore  Dockerfile  Makefile  bootstrap.py  database.py  main.py  pyproject.toml  settings.py
backend/auth/: utils.py
backend/email/: send_mail.py
backend/games_library_api/: bootstrap.py  main.py
backend/games_library_api/email/: send_mail.py
backend/games_library_api/integrations/: admin_operations.py  articles_operations.py  game_operations.py  list_operations.py  user_operations.py
backend/games_library_api/models/: articles_model.py  review_model.py
backend/games_library_api/schemas/: database.py  user.py
backend/games_library_api/services/: cover_upload.py  list_slug.py
backend/games_library_api/transport/handlers/: article_router.py  game_router.py  search_router.py
backend/integrations/: admin_operations.py  after_registration.py  articles_operations.py  game_operations.py  list_operations.py  review_operations.py  user_operations.py
backend/migrations/versions/: 2f3a09706f30_.py  309336472c87_.py  3c47824677af_.py  4504ac1a4df3_.py  5a7bc1544587_.py  5ff100842c44_.py  64ac7d7f12f0_.py  772748fd9d93_.py  a9703e8a87a2_.py  c072ce8d6c88_.py
backend/models/: articles_model.py  game_model.py  list_model.py  review_model.py  users_model.py
backend/schemas/: user.py
backend/templates/email/: reg.html  verify.html
backend/templates/styles/: emailstyles.css
backend/transport/handlers/: admin_router.py  article_router.py  auth_router.py  game_router.py  list_router.py  review_router.py  user_router.py
certbot/conf/renewal/: dudesplay.ru.conf
frontend/: .env  Dockerfile  package-lock.json  package.json
frontend/public/: index.html  script.js
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/api/: api.ts
frontend/src/components/: ArticleCard.tsx  ChangePassForm.tsx  ChangePersonalDataForm.tsx  CreateArticleForm.tsx  Footer.tsx  Header.tsx  ImageCard.tsx  ListCreateForm.tsx  LoginForm.tsx  MediumImageCard.tsx  ModalWindow.tsx  Pagination.tsx  Paginator.tsx  RegForm.tsx  ReviewCard.tsx
frontend/src/localization/: en.json  ru.json
frontend/src/models/: articlesModels.ts  gamesModels.ts  listsModels.ts  response.ts  reviewModels.ts
frontend/src/pages/: AdminPage.tsx  AdminUsers.tsx  ArticlesPage.tsx  CreateArticlePage.tsx  GameInUserList.tsx  GameProfile.tsx  GamesPage.tsx  HomePage.tsx  LikedGamesPage.tsx  ListCreate.tsx  ListPage.tsx  LoginPage.tsx  PlayedGamesPage.tsx  PlaylistsPage.tsx  ProfilePage.tsx  RegPage.tsx  ReviewsPage.tsx  UserListsPage.tsx  UserSettings.tsx  WantPlayGamePage.tsx
frontend/src/service/: AdminService.ts  ArticleService.ts  AuthService.ts  GameService.ts  ListService.ts  ReviewService.ts  SearchService.ts  UserService.ts
frontend/src/store/: article_store.ts  auth_store.ts  games_store.ts  list_store.ts  review_store.ts  search_store.ts  store.ts  user_store.ts
frontend/src/styles/: admin-page.css  articles-page.css  auth-forms.css  create-article.css  data-forms.css  form.css  game-in-lists.css  game-profile.css  games-page.css  header.css  home-page.css  index.css  list-create.css  lists-pages.css  modal.css  page-loader.css  pagination.css  playlists.css  profile-page.css  reg-page.css  reviews.css  user-settings.css
games_library_api/: bootstrap.py  database.py  main.py  pyproject.toml  settings.py
games_library_api/auth/: utils.py
games_library_api/email/: main.py  send_mail.py
games_library_api/integrations/: admin_operations.py  after_registration.py  articles_operations.py  game_operations.py  list_operations.py  list_opertions.py  review_operations.py  search_operation.py  user_operations.py  users.py  verify_user.py
games_library_api/models/: add_game_model.py  articles_model.py  error_model.py  game_model.py  list_model.py  review_model.py  search_model.py  test.py  users_model.py
games_library_api/schemas/: database.py  user.py
games_library_api/services/: after_registration.py  cover_upload.py  list_slug.py  tempCodeRunnerFile.py  verify_user.py
games_library_api/transport/handlers/: admin_router.py  article_router.py  auth.py  auth_router.py  game_router.py  list_router.py  review_router.py  user.py  user_router.py  verify_user_router.py
games_library_front/: package-lock.json  package.json
games_library_front/public/: index.html  manifest.json
games_library_front/src/: App.css  App.tsx  index.css  index.tsx
games_library_front/src/api/: api.ts  endpoints.ts  request.ts
gamification/: .env  .env.production  Dockerfile  package-lock.json  package.json
gamification/public/: index.html  manifest.json  robots.txt  sitemap.xml
gamification/src/: App.tsx  index.css  index.tsx
migrations/: env.py
migrations/versions/: 05dd56ee31ea_.py  05eb9f8153b6_.py  08c0e216329b_.py  0c4dcb9d1e33_.py  0df2ef92d156_.py  116d4ebc447b_изменил_уникальность_колонки.py  147f4e0f16be_new_rules_for_field.py  1b92955a965a_добавил_каскадное_удаление_данных.py  1cd22339ab6f_.py  21a418e19eb9_.py  21d1b2f7bccc_init.py  28bb3eecb29b_.py  2a94a6dfe9b8_add_tables.py  2f0849c9fd9a_new_rules_for_field.py  2fa779822155_.py  30c8a9898bf1_add_columns.py  311974732c37_.py  3362da42650c_новые_таблицы.py  35394e8537bf_новые_таблицы.py  3fba65a44bf7_.py  40db087e7b31_user_db.py  412e7267dade_.py  43e6e698bbae_.py  4c62599a6554_.py  51dc23f39005_.py  5c5d1c320199_.py  68bc65cbd9fa_a.py  6bbcb73b3fa3_user_db.py  6c779a0e2833_.py  6edc1607222d_.py  71ade5ecfca9_.py  7703d236f826_.py  7d6689421396_.py  7f93448355a1_.py  8e574c0473e4_user_db.py  8f95b62a4bd9_.py  90d25fa29a14_a.py  91a0f93b656d_.py  91d5fc1be3db_новые_таблицы.py  96347b80b89b_добавил_каскадное_удаление_данных.py  (+37 more)
nginx/: nginx.conf
redis/: redis.conf
templates/: email.html
templates/email/: email.html  reg.html  verify.html
tests/: conftest.py
(+189 files in other folders)
